--- a/about.html
+++ b/about.html
@@ -44,6 +44,9 @@
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="donate.html">Donate</a>
+            </li>
           </ul>
         </div>
       </div>
