Fixed donate page

--- a/donate.html
+++ b/donate.html
@@ -75,15 +75,18 @@
           <p>If you are considering donating, you may give through monthly pledges or one-time gifts. </p>
 
 
-          <h2 class="section-heading">Giving Online</h2>
-          <p>You can give online through my personal page at: <a href="https://givetoruf.org/donate/1812">https://givetoruf.org/donate/1812</a>
+          <h2 class="section-heading">Give Online</h2>
+          <p>You can give online through my personal page at: <a href="https://givetoruf.org/donate/1812"><b>https://givetoruf.org/donate/1812</b></a>
           </p>
           
           <h2 class="section-heading">Give through Check</h2>
-          <p>You can give through check by mailing them to the donation center: Reformed University Fellowship
-          PO Box 890004
-          Charlotte, NC 28289-0004
-          Payable to: Reformed University Ministries ***1812 in the memo line***</p>
+          <p>You can give through check by mailing them to the donation center with my specific fund code <b>1812</b> in the memo line: 
+          <br/> 
+          <br/> <b>Reformed University Fellowship
+          <br/> PO Box 890004
+          <br/> Charlotte, NC 28289-0004</b>
+          
+          </p>
 
           </p>
         </div>
