--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Paul Davis</title>
+    <title>About</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -59,8 +59,8 @@
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="page-heading">
-              <h1>About Me</h1>
-              <span class="subheading">This is what I do.</span>
+              <h1>About</h1>
+              <!-- <span class="subheading">This is what I do.</span> -->
             </div>
           </div>
         </div>
@@ -71,7 +71,20 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p> -->
+          <!-- <h2 class="section-heading">About Me</h2> -->
+          <!-- <p>This page is under construction.</p> -->
+          <p>
+          <h2 class="section-heading">About RUF</h2>
+
+          <p><b>REFORMED</b> 
+          <br/> Simply put, “Reformed,” describes the biblical convictions of historic Christianity. The movement of the church which sought to renew these convictions afresh ministered the Christian gospel under the banners of “Faith Alone,” “Grace Alone,” “Scripture Alone,” "Christ Alone," and “To God Alone Be The Glory.” In calling ourselves “Reformed” we claim the same banners for our work.</p>
+
+          <p><b>UNIVERSITY</b> 
+          <br/> More than just a ministry on the university campus, RUF seeks to be a ministry for the university. We strive to serve in this unique stage of a student’s life in the world they live in, exploring together how the Lordship of Christ informs every area of life.</p>
+
+          <p><b>FELLOWSHIP</b> 
+          <br/> All human problems originate from our alienation from God, and those problems show up vividly in broken relationships with one another. God’s answer to human alienation is the sacrifice of Jesus on the cross, and His answer to disintegrated relationships is the church of Jesus. RUF is the arm of this restorative people reaching out to the college campus.</p>
+          </p>
         </div>
       </div>
     </div>
