--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Paul Davis</title>
+    <title>Contact</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -71,11 +71,16 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <p>I would love to have a conversation about what my time in Seattle will be like. Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
+          <p>I would love to have a conversation about what my time in Seattle will be like. <!-- Fill out the form below to send me a message and I will get back to you as soon as possible! --></p>
+
+          <p>
+          You can get in touch with me at <a href="mailto:paul.davis@ruf.org"><b>paul.davis@ruf.org</b></a>.</p>
+
+
           <!-- Contact Form - Enter your email address on line 19 of the mail/contact_me.php file to make this form work. -->
           <!-- WARNING: Some web hosts do not allow emails to be sent through forms to common mail hosts like Gmail or Yahoo. It's recommended that you use a private domain email address! -->
           <!-- To use the contact form, your site must be on a live web host with PHP! The form will not work locally! -->
-          <form name="sentMessage" id="contactForm" novalidate>
+          <!-- <form name="sentMessage" id="contactForm" novalidate>
             <div class="control-group">
               <div class="form-group floating-label-form-group controls">
                 <label>Name</label>
@@ -109,7 +114,7 @@
             <div class="form-group">
               <button type="submit" class="btn btn-primary" id="sendMessageButton">Send</button>
             </div>
-          </form>
+          </form> -->
         </div>
       </div>
     </div>
