--- a/donate.html
+++ b/donate.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Paul Davis</title>
+    <title>Donate</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -72,7 +72,7 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
 
-          <p>If you are considering donating, you may give through monthly pledges or one-time gifts. </p>
+          <p>If you are considering donating, you may give through monthly pledges or one-time gifts. All gifts are tax deductible and RUF is a certified 501(c)(3).</p>
 
 
           <h2 class="section-heading">Give Online</h2>
@@ -87,6 +87,20 @@
           <br/> Charlotte, NC 28289-0004</b>
           
           </p>
+
+          <h2 class="section-heading">Budget Breakdown</h2>
+          <p>My yearly budget breakdown is as follows:
+          <br/> <b>Personal Expenses (50%):</b> The intern salary is determined by a standard base pay, cost of living, and student loans.
+          <br/> <b>Benefits (21%):</b> Benefits include health insurance, dental insurance, worker’s compensation, life insurance and FICA. 
+          <br/> <b>General Administration (14%):</b> This covers accounting,
+          legal, receipting, and other general expenses.
+          <br/> <b>Ministry Expenses (15%):</b> These include all expenses related to my personal ministry. It covers student conferences, development, study program materials, moving, orientation, training, and miscellaneous expenses.
+          </p>
+
+          <a href="#">
+              <img class="img-fluid" src="img/budget-breakdown.png" alt="">
+          </a>
+
 
           </p>
         </div>
