--- a/post.html
+++ b/post.html
@@ -53,7 +53,7 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/post-bg.jpg')">
+    <header class="masthead" style="background-image: url('img/blog/internclass.jpg')">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
@@ -78,7 +78,7 @@
             <!-- <h2 class="section-heading">The Final Frontier</h2> -->
 
             <a href="#">
-              <img class="img-fluid" src="img/post-sample-image.jpg" alt="">
+              <img class="img-fluid" src="img/blog/interncircle.jpg" alt="">
             </a>
             <span class="caption text-muted">All the interns in a circle.</span>
 
