Minor text updates

--- a/2018-06-17.html
+++ b/2018-06-17.html
@@ -80,7 +80,7 @@
             <a href="#">
               <img class="img-fluid" src="img/blog/baptism.jpg" alt="">
             </a>
-            <span class="caption text-muted"></span>
+            <span class="caption text-muted">Giving my testimony.</span>
 
             
           </div>
