--- a/2018-06-17.html
+++ b/2018-06-17.html
@@ -81,6 +81,9 @@
               <img class="img-fluid" src="img/blog/baptism.jpg" alt="">
             </a>
             <span class="caption text-muted">Giving my testimony.</span>
+            <p>
+            <iframe width=100% height=500 src="https://www.youtube.com/embed/xkuIA3O_bhE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            </p>
 
             
           </div>
