--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="page-heading">
               <h1>About</h1>
-              <span class="subheading">This is what I do.</span>
+              <span class="subheading"></span>
             </div>
           </div>
         </div>
@@ -80,7 +80,7 @@
 
           <p>Paul enjoys traveling, reading, concerts, watching movies, playing games (both video and board), and spending time in conversation.</p>
 
-          <p>Paul looks forward to getting to know students at UW and exploring all that Seattle has to offer.</p>
+          <p>Paul loves getting to know students at UW and exploring all that Seattle has to offer.</p>
 
 
           <h2 class="section-heading">About RUF</h2>
